--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@/styles/*": ["styles/*"],
+      "@/styles/*": ["style/*"],
       "@/images/*": ["images/*"]
     }
   }
